welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: illegal start of simple pattern
if (litMessage()=="R"){
^BDRBuggle:54: error: '=' expected but '}' found.
	}
        ^